working on making api call and insalled npm

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git"
   },
   "keywords": [],
-  "author": "dm ap",
+  "author": "andrew",
   "license": "ISC",
   "homepage": "",
   "devDependencies": {
